k8s/03-postgres-registration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-registration
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: db-registration
  template:
    metadata:
      labels:
        app: db-registration
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db-registration
  namespace: event-manager
spec:
  selector:
    app: db-registration
  ports:
  - port: 5432
    targetPort: 5432
