k8s/03-postgres-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-users
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: db-users
  template:
    metadata:
      labels:
        app: db-users
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {} # For testing, usage of PVC is recommended for prod
---
apiVersion: v1
kind: Service
metadata:
  name: db-users
  namespace: event-manager
spec:
  selector:
    app: db-users
  ports:
  - port: 5432
    targetPort: 5432
