k8s/06-eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: gestor_eventos_empresariales_inteligente-eureka-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: event-manager
spec:
  selector:
    app: eureka-server
  ports:
  - port: 8761
    targetPort: 8761
