k8s/07-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: gestor_eventos_empresariales_inteligente-auth-server:latest
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: event-manager
spec:
  selector:
    app: auth-server
  ports:
  - port: 8080 # Assuming default Spring Boot port, mapping to 8080 internal
    targetPort: 8080
