k8s/08-event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: gestor_eventos_empresariales_inteligente-event-service:latest
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: event-manager
spec:
  selector:
    app: event-service
  ports:
  - port: 8080
    targetPort: 8080
