k8s/09-registration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-service
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: registration-service
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
      - name: registration-service
        image: gestor_eventos_empresariales_inteligente-registration-service:latest
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: registration-service
  namespace: event-manager
spec:
  selector:
    app: registration-service
  ports:
  - port: 8080
    targetPort: 8080
