k8s/10-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: gestor_eventos_empresariales_inteligente-notification-service:latest
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: event-manager
spec:
  selector:
    app: notification-service
  ports:
  - port: 8080
    targetPort: 8080
