k8s/11-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: event-manager
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: gestor_eventos_empresariales_inteligente-api-gateway:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: event-manager
spec:
  selector:
    app: api-gateway
  ports:
  - port: 8082
    targetPort: 8082
